--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -26,7 +26,9 @@
 
 <br>
 
-<button class="btn btn-primary" ng-click='incrementa()'>Novo</button>
+<a ng-href='#/contato' class='btn btn-primary'>Novo Contato</a>
+<!--button class="btn btn-primary" ng-click='incrementa()'>Novo</button-->
+
 <!--p>Contatos cadastrados: {{contatos.length}}</p-->
 
 <p ng-show="contatos.length">Contatos cadastrados: {{contatos.length}}</p>
