--- a/public/partials/cursos.html
+++ b/public/partials/cursos.html
@@ -24,7 +24,7 @@
 
 <br>
 
-<button class="btn btn-primary" ng-click='incrementa()'>Novo</button>
+<a ng-href='#/curso' class='btn btn-primary'>Novo Curso</a>
 
 <p> Cursos cadastrados: {{cursos.length}}</p>
 <div class="table-responsive">
